<resources>
    <string name="app_name">心情日记</string>
    <string name="app_name_ch">心情日记</string>
    <string name="app_name_en">Mood diary</string>
    <string name="welcome_use">欢迎使用心情日记！</string>

    <string name="enter_password">输入口令</string>
    <string name="enter_old_password">原口令</string>
    <string name="edit_password">输入新口令</string>
    <string name="edit_confirm_password">确认新口令</string>
    <string name="not_the_same_password">两次输入口令不一致！</string>
    <string name="edit_password_success">修改口令成功</string>
    <string name="private_password">设置口令</string>
    <string name="enable_password">已启用口令</string>
    <string name="disable_password">未启用口令</string>

    <string name="all">全部</string>
    <string name="Sunday">周日</string>
    <string name="Monday">周一</string>
    <string name="Tuesday">周二</string>
    <string name="Wednesday">周三</string>
    <string name="Thursday">周四</string>
    <string name="Friday">周五</string>
    <string name="Saturday">周六</string>
    <string name="today">今天</string>
    <string name="search">搜索</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="edit">修改</string>
    <string name="password_error">口令错误</string>
    <string name="manage">管理</string>
    <string name="no_sort">未分类</string>
    <string name="all_sort">所有分类</string>
    <string name="edit_my_category">[编辑我的分类]</string>
    <string name="edit_category">编辑分类</string>
    <string name="input_limit">1~8个字符</string>
    <string name="delete_category_">删除分类：</string>
    <string name="delete_category_only">仅删除分类</string>
    <string name="delete_category_and_diary">删分类和日记</string>
    <string name="delete_category_can_not_be_done">此分类不可删除</string>
    <string name="enter_keyword">输入关键字…</string>
    <string name="scale">大小</string>
    <string name="current_text_size">当前字号</string>
    <string name="general_max_per_image">图片过大，超过200k上限。</string>
    <string name="image">[图片]</string>
    <string name="location">位置：</string>
    <string name="weather">天气：</string>
    <string name="temperature">温度：</string>
    <string name="last_update">最后更新时间：</string>
    <string name="no_diary">没有日记哟~</string>
    <string name="setting">设置</string>
    <string name="theme">主题</string>
    <string name="about_mood_diary">关于心情日记</string>

    <string name="theme_color_name_main">经典蓝</string>
    <string name="theme_color_name_1">自定义</string>
    <string name="theme_color_name_2">清新蓝</string>
    <string name="theme_color_name_3">秋意橙</string>
    <string name="theme_color_name_4">华丽紫</string>
    <string name="theme_color_name_5">朝气粉</string>
    <string name="theme_color_name_6">酷炫黑</string>

    <string name="statistics_in">在过去的</string>
    <string name="statistics_day_unit">天里</string>
    <string name="statistics_record">共持有</string>
    <string name="statistics_count_unit">份心情</string>

    <string name="export_diary">导出日记</string>
    <string name="export">导出</string>
    <string name="settings_export_diary_date">导出日期</string>
    <string name="settings_export_diary_next">下一步</string>
    <string name="settings_export_start_date">选择开始日期</string>
    <string name="settings_export_end_date">选择结束日期</string>
    <string name="please_choose_date">请选择日期</string>
    <string name="export_date_overflow">所选日期超出范围</string>
    <string name="export_invalid">所选日期区间没有记录</string>
    <string name="export_history">查看</string>
    <string name="export_success">导出PDF成功</string>
    <string name="export_fail">导出PDF失败</string>
    <string name="not_pdf">所选文件非pdf格式</string>
    <string name="lost_font">字体文件缺失</string>
    <string name="choose_export_path">选择导出目录</string>



    <string name="context_f">f</string>
    <string name="context_e">e</string>
    <string name="context_j">j</string>
    <string name="context_a">a</string>
    <string name="context_s">s</string>
    <string name="context_i">i</string>
    <string name="context_b">b</string>
    <string name="context_l">l</string>
    <string name="context_at">\@</string>
    <string name="context_1">1</string>
    <string name="context_6">6</string>
    <string name="context_3">3</string>
    <string name="context_do">.</string>
    <string name="context_c">c</string>
    <string name="context_o">o</string>
    <string name="context_m">m</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
