<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.app.feja.mooddiary.ui.activity.ExportDiaryActivity">

    <com.app.feja.mooddiary.widget.setting.ExportTitleBar
        android:id="@+id/id_export_title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y31" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_export_start_date"
        android:textSize="16sp"
        android:textColor="@color/darkGray"
        android:layout_margin="@dimen/y4"/>

    <TextView
        android:id="@+id/id_text_view_export_start_date"
        android:layout_margin="@dimen/y4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18sp"
        android:background="@color/white"
        android:padding="@dimen/y5"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_export_end_date"
        android:textSize="16sp"
        android:textColor="@color/darkGray"
        android:layout_margin="@dimen/y4"/>

    <TextView
        android:id="@+id/id_text_view_export_end_date"
        android:layout_margin="@dimen/y4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18sp"
        android:background="@color/white"
        android:padding="@dimen/y5"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_export_path"
        android:textSize="16sp"
        android:textColor="@color/darkGray"
        android:layout_margin="@dimen/y4"/>

    <TextView
        android:id="@+id/id_text_view_export_path"
        android:layout_margin="@dimen/y4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18sp"
        android:background="@color/white"
        android:padding="@dimen/y5"/>

    <TextView
        android:id="@+id/id_export_execute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/y4"
        android:textSize="16sp"
        android:background="@drawable/rounded"
        android:textAlignment="center"
        android:padding="@dimen/y5"
        android:text="@string/export"/>

</LinearLayout>
